# rp2040-project-template

./: .gitignore  Cargo.toml  Embed.toml  README.md  cargo-generate.toml  debug_probes.md  flake.nix  memory.x  probe-run.sh  rp2040-project-template.uf2
.cargo/: config  config.toml
.github/workflows/: ci_checks.yml  nix-flake-check.yaml
cargo-generate/: Cargo.toml  config.toml  flake.nix  launch.json  remove_rprs.rhai
src/: lib.rs  main.rs  pll.rs  resets.rs
