[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
readme = "README.md"
name = "rp-test"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.0", features = ["inline-asm"] }
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"

defmt = "0.1.3"
defmt-rtt = "0.1.0"
panic-probe = "0.1.0"

rp2040-pac = { git = "https://github.com/rp-rs/rp2040-pac", branch="main" }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="vector" }
#rp2040-pac = { path = "../rp2040-pac" }
#rp2040-boot2 = { path = "../rp2040-boot2-rs" }

[patch.crates-io]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m" }

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []


# this lets you use `cargo fix`!
[[bin]]
name = "rp-test"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
